--- a/index.html
+++ b/index.html
@@ -293,22 +293,36 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 				</div>
 				<!-- End .project-info -->
 			</div>
-			<a id="view-more-projects" href="#">View More Projects</a>
-			<div id="more-projects" class="row">
-				<div class="project shadow-large">
-					<div class="project-image">
-						<img src="images/mejer.png" />
-					</div>
-					<!-- End .project-image -->
-					<div class="project-info">
-						<h3>Buy Again Product Recommendation Engine through machine learning</h3>
-						<p>
-							Developed a probabilistic classification model to predict customer’s purchase behavior based on recency, frequency, price sensitivity and acceptance of substitution to improve customer satisfaction and buying experience.
-						</p>
-						<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
-					</div>
-					<!-- End .project-info -->
+			<div class="project shadow-large">
+				<div class="project-image">
+					<img src="images/mejer.png" height="250" width="250"/>
 				</div>
+				<!-- End .project-image -->
+				<div class="project-info">
+					<h3>Buy Again Product Recommendation Engine through machine learning</h3>
+					<p>
+						Developed a probabilistic classification model to predict customer’s purchase behavior based on recency, frequency, price sensitivity and acceptance of substitution to improve customer satisfaction and buying experience.
+					</p>
+					<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
+				</div>
+				<!-- End .project-info -->
+			</div>
+			<!-- <a id="view-more-projects" href="#">View More Projects</a> -->
+			<!-- <div id="more-projects" class="row"> -->
+				<!-- <div class="project shadow-large"> -->
+					<!-- <div class="project-image"> -->
+						<!-- <img src="images/mejer.png" /> -->
+					<!-- </div> -->
+					End .project-image
+					<!-- <div class="project-info"> -->
+						<!-- <h3>Buy Again Product Recommendation Engine through machine learning</h3> -->
+						<!-- <p> -->
+							<!-- Developed a probabilistic classification model to predict customer’s purchase behavior based on recency, frequency, price sensitivity and acceptance of substitution to improve customer satisfaction and buying experience. -->
+						<!-- </p> -->
+						<!-- <a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a> -->
+					<!-- </div> -->
+					End .project-info
+				<!-- </div> -->
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
 						<!-- <img src="images/rshiny.png" /> -->
