--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ through data exploration and storytelling.
 						Recruited sales, aftermarket, customer care and product management personnel and assisted in on-campus hiring
 					</li>
 					<li>
-						•	Onboarded 40 trainees and increased entry-level employee performance by 40% via trainings and continuous feedback
+						Onboarded 40 trainees and increased entry-level employee performance by 40% via trainings and continuous feedback
 					</li>
 					<!-- <li> -->
 						<!-- Managing project timelines, creating UAT plans and test cases and coordinating with Go-Live Plans -->
@@ -278,35 +278,36 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-            </div>
-			<div class="project shadow-large">
-				<div class="project-image">
-					<img src="images/credit default.png" height="250" width="250"/>
-				</div>
+           
+				<div class="project shadow-large">
+					<div class="project-image">
+						<img src="images/credit default.png" height="250" width="250"/>
+					</div>
 				<!-- End .project-image -->
-				<div class="project-info">
-					<h3>Credit Default Prediction</h3>
-					<p>
-						Credit default means not being able to repay the debt. An accurate prediction of default can help in balancing risk and return for the bank by charging higher rates and reducing the credit limit for risky customers. Objective of this project is to predict if a customer will default or not, based on his associated attributes.
-					</p>
-					<a href="https://github.com/LohitaSrinivasan/Credit-default-prediction-">View Project</a>
-				</div>
+					<div class="project-info">
+						<h3>Credit Default Prediction</h3>
+						<p>
+							Credit default means not being able to repay the debt. An accurate prediction of default can help in balancing risk and return for the bank by charging higher rates and reducing the credit limit for risky customers. Objective of this project is to predict if a customer will default or not, based on his associated attributes.
+						</p>
+						<a href="https://github.com/LohitaSrinivasan/Credit-default-prediction-">View Project</a>
+					</div>
 				<!-- End .project-info -->
-			</div>
-			<div class="project shadow-large">
-				<div class="project-image">
-					<img src="images/mejer.png" height="250" width="250"/>
 				</div>
+				<div class="project shadow-large">
+					<div class="project-image">
+						<img src="images/mejer.png" height="250" width="250"/>
+					</div>
 				<!-- End .project-image -->
-				<div class="project-info">
-					<h3>Buy Again Product Recommendation Engine through machine learning</h3>
-					<p>
-						Developed a probabilistic classification model to predict customer’s purchase behavior based on recency, frequency, price sensitivity and acceptance of substitution to improve customer satisfaction and buying experience.
-					</p>
-					<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
-				</div>
+					<div class="project-info">
+						<h3>Buy Again Product Recommendation Engine through machine learning</h3>
+						<p>
+							Developed a probabilistic classification model to predict customer’s purchase behavior based on recency, frequency, price sensitivity and acceptance of substitution to improve customer satisfaction and buying experience.
+						</p>
+						<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
+					</div>
 				<!-- End .project-info -->
-			</div>
+				</div>
+			 </div>
 			<!-- <a id="view-more-projects" href="#">View More Projects</a> -->
 			<!-- <div id="more-projects" class="row"> -->
 				<!-- <div class="project shadow-large"> -->
