--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 					<!-- <div class="project-image"> -->
 						<!-- <img src="images/mejer.png" /> -->
 					<!-- </div> -->
-					End .project-image
+					<!-- End .project-image -->
 					<!-- <div class="project-info"> -->
 						<!-- <h3>Buy Again Product Recommendation Engine through machine learning</h3> -->
 						<!-- <p> -->
@@ -322,7 +322,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 						<!-- </p> -->
 						<!-- <a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a> -->
 					<!-- </div> -->
-					End .project-info
+					<!-- End .project-info -->
 				<!-- </div> -->
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
