--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ through data exploration and storytelling.
 					<!-- </li> -->
                 <!-- </ul> -->
             <!-- </div> -->
-        <!-- </div> -->
-    <!-- </div> -->
+        </div>
+    </div>
     <!-- End #experience -->
 
     <div id="education">
