--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="/images/photo.jpg" />
+	<meta property="og:image" content="/images/1.jpg" />
 	<meta property="og:url" content="https://lohitasrinivasan.github.io/" />
 	<meta property="og:title" content="Lohita Srinivasan" />
 	<meta property="og:description" content="Professional Portfolio" />
